--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -52,3 +52,23 @@ html.dark {
   --prism-line-highlight-background: #444444;
   --prism-selection-background: #444444;
 }
+
+.sims-markdown {
+  a {
+    @apply text-lime-500 no-underline;
+  }
+
+  h2 {
+    background-image: linear-gradient(0deg ,#AEDC3657 54%,transparent 0,transparent);
+    width: fit-content;
+  }
+
+  h3 {
+    background-image: linear-gradient(0deg ,#d4e8f8 54%,transparent 0,transparent);
+    width: fit-content;
+  }
+
+  img {
+    @apply border border-dashed border-gray-300 p-4 ;
+  }
+}
